<resources>
    <string name="app_name">割り勘アプリ</string>
    <string name="special">別会計の方法を選んでください</string>
    <string name="special_account">特別会計</string>
    <string name="simple_account">簡易会計</string>
    <string name="detailed_account">詳細会計</string>
    <string name="member_manage">メンバー管理</string>
    <string name="simple_account_description">人数を指定した簡単な計算</string>
    <string name="member_manage_description">メンバー情報やグループ情報を管理</string>
    <string name="detailed_account_description">メンバーや金額を指定した計算 \n チェックリストを作成</string>
    <string name="select_applier">適用者選択</string>
    <string name="total">合計金額</string>
    <string name="discount">値引き</string>


    <string name="currency">円</string>
    <string name="positive_button">OK</string>
    <string name="save_button">保存</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">削除</string>
    <string name="return_button">戻る</string>
    <string name="register">登録</string>
    <string name="zero"></string>



    <string name="setting_request_title">設定登録が必要です</string>
    <string name="setting_request_from">設定画面から</string>
    <string name="fractional_value">・端数の数値</string>>
    <string name="method">・処理方法</string>
    <string name="setting_request_end">を設定してください。</string>
    <string name="group_name_unset">&lt;グループ未設定&gt;</string>
    <string name="id">id</string>
    <string name="added">を登録しました</string>
    <string name="modified">"の情報を変更しました"</string>
    <string name="delete_confirm_title">"削除確認"</string>
    <string name="delete_confirm">の情報を削除しますか？</string>
    <string name="delete_confirm_real">本当に削除してよろしいですか？？</string>
    <string name="deleted">の情報を削除しました</string>
    <string name="name_edit">名称編集</string>
    <string name="complete_modification">変更完了しました</string>
    <string name="already_added">は既に登録されています</string>

    <!--　エラー関係 -->
    <string name="error_fraction_bigger">計算設定の「端数の数値」は、合計金額を超えないようにしてください</string>
    <string name="error">エラー</string>
    <string name="error_numMember">参加者を1人以上設定してください</string>
    <string name="error_over_discount">値引きの金額が合計金額を上回っています。</string>
    <string name="error_minus">計算結果が0円未満になります。割引額などを見直してください。</string>

    <!--　メンバー関係 -->
    <string name="add_member">新規メンバー追加</string>
    <string name="name">名前</string>
    <string name="hint_edit_name">名前を入力してください</string>
    <string name="register_participants">参加者登録</string>
    <string name="member_info">メンバー情報</string>
    <string name="member_attribute">メンバー属性情報</string>
    <string name="member_info_manage">メンバー情報管理</string>
    <string name="member_list">メンバー情報一覧</string>
    <string name="register_member">メンバー登録</string>
    <string name="number_participants">参加人数:</string>
    <string name="per_member">1人あたり：</string>
    <string name="calculation">計算</string>
    <string name="how_to_count_member">人</string>

    <!-- グループ関係 -->
    <string name="group">グループ</string>
    <string name="group_c">グループ:</string>
    <string name="group_list">グループ一覧</string>
    <string name="add_group_title">新規グループ登録</string>
    <string name="add_group">新規グループ登録</string>
    <string name="group_info">グループ情報</string>
    <string name="narrow_down_group">:グループで絞り込む：</string>

    <!-- ポジション関係 -->
    <string name="position">ポジション</string>
    <string name="position_c">ポジション:</string>
    <string name="position_list">ポジション一覧</string>
    <string name="add_position_title">新規ポジション登録</string>
    <string name="add_position">新規ポジション登録</string>

    <!-- Intent Key Parameter -->
    <string name="i_param_rounding_method">roundingMethod</string>
    <string name="i_param_rounding_value">roundingValue</string>
    <string name="i_param_way">ways</string>
    <string name="i_param_num_special">nums</string>
    <string name="i_param_price_special">prices</string>
    <string name="i_param_total">total</string>
    <string name="i_param_discount">discount</string>
    <string name="i_param_num_member">numMember</string>
    <string name="i_param_new_calculation">newCalculation</string>


    <!-- Parameter -->
    <string name="param_special">special</string>
    <string name="param_name">name</string>
    <string name="method_ceil">切り上げ</string>
    <string name="method_floor">切り捨て</string>
    <string name="method_round">四捨五入</string>
    <string name="specified_cost">円</string>
    <string name="discount_cost">円引き</string>

    <!--チェックリスト -->
    <string name="temp_save_return">一時保存して戻る</string>
    <string name="be_collected">回収予定：</string>
    <string name="call_temp_saved">一時保存を呼び出す</string>


</resources>
