<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMemberActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/member_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/nameEdit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/groupText"
        app:layout_constraintEnd_toEndOf="@id/positionText"
        app:layout_constraintLeft_toLeftOf="@id/positionText"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <TextView
        android:id="@+id/groupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameText"
        android:text="@string/group_c"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/positionText"
        app:layout_constraintEnd_toEndOf="@id/positionText"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <TextView
        android:id="@+id/positionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/position_c"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/addGroupButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupText" />

    <EditText
        android:id="@+id/nameEdit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/nameText"
        app:layout_constraintLeft_toRightOf="@id/nameText"
        app:layout_constraintStart_toStartOf="@id/positionSpinner2" />

    <Spinner
        android:id="@+id/groupSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="115dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/groupText"
        app:layout_constraintStart_toEndOf="@+id/groupText" />

    <Spinner
        android:id="@+id/positionSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/positionText"
        android:layout_marginLeft="5dp"
        android:scrollbarSize="15dp"
        app:layout_constraintBaseline_toBaselineOf="@id/positionText"
        app:layout_constraintLeft_toRightOf="@id/positionText" />

    <Button
        android:id="@+id/addGroupButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddGroupButton"
        android:text="@string/add_group"
        app:layout_constraintBottom_toTopOf="@id/addPositionButton2"
        app:layout_constraintEnd_toEndOf="@id/addPositionButton2"
        app:layout_constraintTop_toBottomOf="@id/positionText" />

    <Button
        android:id="@+id/addPositionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="onClickAddPositionButton"
        android:text="@string/add_position"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addGroupButton2" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickSaveButton"
        android:text="@string/save_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPositionButton2" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/saveButton"
        android:layout_alignTop="@id/saveButton"
        android:layout_alignParentEnd="true"
        android:onClick="onClickDeleteButton"
        android:text="@string/delete_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saveButton"
        app:layout_constraintTop_toTopOf="@id/saveButton" />

</android.support.constraint.ConstraintLayout>