<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMemberActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="42dp"
        android:text="@string/add_member"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEdit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="@id/textView7"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <EditText
        android:id="@+id/nameEdit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_edit_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/group"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="@id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/groupSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView6"
        app:layout_constraintStart_toStartOf="@id/nameEdit1"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/position"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/positionSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/textView7"
        android:layout_marginTop="96dp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView7"
        app:layout_constraintStart_toStartOf="@id/nameEdit1"
        app:layout_constraintTop_toBottomOf="@+id/groupSpinner1"
        tools:layout_constraintBaseline_toBaselineOf="@id/textView7" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickRegisterButton"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/addGroupButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        tools:layout_constraintTop_toBottomOf="@id/textView7" />

    <Button
        android:id="@+id/addGroupButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:onClick="onClickAddGroupButton"
        android:text="@string/add_group"
        app:layout_constraintBottom_toTopOf="@+id/addPositionButton2"
        app:layout_constraintEnd_toEndOf="@id/addPositionButton2"
        app:layout_constraintStart_toStartOf="@id/addPositionButton2"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        tools:layout_constraintBottom_toTopOf="@id/addPositionButton2"
        tools:layout_constraintStart_toStartOf="@id/addPositionButton2" />

    <Button
        android:id="@+id/addPositionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:onClick="onClickAddPositionButton"
        android:text="@string/add_position"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addGroupButton2" />

</android.support.constraint.ConstraintLayout>