<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecialCalculationActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/total"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView27" />

    <EditText
        android:id="@+id/totalCostEdit"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintLeft_toRightOf="@id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/currency"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView11"
        app:layout_constraintLeft_toRightOf="@id/totalCostEdit" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/discount"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView11"
        app:layout_constraintLeft_toRightOf="@id/textView14" />

    <EditText
        android:id="@+id/discountEdit2"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/textView11"
        app:layout_constraintLeft_toRightOf="@id/textView15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/currency"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView11"
        app:layout_constraintLeft_toRightOf="@id/discountEdit2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_participants"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@id/textView11"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
 />

    <TextView
        android:id="@+id/numMember2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView17"
        app:layout_constraintLeft_toRightOf="@id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <Button
        android:id="@+id/addParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:onClick="onClickAddParticipantButton"
        android:text="@string/register_participants"

        app:layout_constraintBottom_toBottomOf="@id/textView18"
        app:layout_constraintLeft_toRightOf="@id/textView18"
        app:layout_constraintTop_toTopOf="@id/textView18"
        />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/special_account"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView27"
        app:layout_constraintRight_toRightOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@id/addParticipant"
        app:layout_constraintBottom_toTopOf="@+id/specialEdit1"
        />

    <EditText
        android:id="@+id/specialEdit1"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@id/specialEdit3"
        app:layout_constraintTop_toBottomOf="@id/textView19"
        app:layout_constraintBottom_toTopOf="@+id/specialEdit2"

        />

    <Spinner
        android:id="@+id/spSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="247dp"
        android:entries="@array/specialAccount"
        android:prompt="@string/special"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/spSpinner3"
        app:layout_constraintStart_toEndOf="@+id/specialEdit1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nSpecial1"
        android:layout_width="11dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="43dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit1"
        app:layout_constraintBottom_toTopOf="@+id/nSpecial2"
        app:layout_constraintStart_toEndOf="@+id/spSpinner1" />

    <Button
        android:id="@+id/addAppliedButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddAppliedButton1"
        android:text="@string/select_applier"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/textView21"
        app:layout_constraintEnd_toEndOf="@id/addAppliedButton3"
        app:layout_constraintLeft_toLeftOf="@id/textView21"
        app:layout_constraintTop_toTopOf="@id/textView21" />

    <EditText
        android:id="@+id/specialEdit2"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="170dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/specialEdit3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specialEdit1" />

    <Spinner
        android:id="@+id/spSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="182dp"
        android:entries="@array/specialAccount"
        android:prompt="@string/special"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/spSpinner3"
        app:layout_constraintStart_toEndOf="@+id/specialEdit2" />

    <TextView
        android:id="@+id/nSpecial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="180dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spSpinner2"
        tools:layout_constraintEnd_toEndOf="@id/nSpecial3" />

    <Button
        android:id="@+id/addAppliedButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddAppliedButton2"
        android:text="@string/select_applier"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/textView22"
        app:layout_constraintEnd_toEndOf="@id/addAppliedButton3"
        app:layout_constraintLeft_toLeftOf="@id/textView22"
        app:layout_constraintTop_toTopOf="@id/textView22" />

    <TextView
        android:id="@+id/nSpecial3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="113dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spSpinner3" />

    <EditText
        android:id="@+id/specialEdit3"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specialEdit2" />

    <Spinner
        android:id="@+id/spSpinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="51dp"
        android:entries="@array/specialAccount"
        android:prompt="@string/special"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintStart_toEndOf="@+id/specialEdit3" />


    <Button
        android:id="@+id/addAppliedButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:onClick="onClickAddAppliedButton3"
        android:text="@string/select_applier"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/textView23"
        app:layout_constraintLeft_toLeftOf="@id/textView23"
        app:layout_constraintTop_toTopOf="@id/textView23"
        />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickCalculateButton"
        android:text="@string/calculation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specialEdit3" />

    <Button
        android:id="@+id/callTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCallTempButton"
        android:text="@string/call_temp_saved"
        app:layout_constraintTop_toTopOf="@id/calculateButton"
        tools:layout_constraintBottom_toBottomOf="@id/calculateButton"
        tools:layout_editor_absoluteX="233dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/how_to_count_member"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView17"
        app:layout_constraintLeft_toRightOf="@id/numMember2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_count_member"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit1"
        app:layout_constraintEnd_toEndOf="@id/textView23"
        app:layout_constraintLeft_toRightOf="@id/nSpecial1" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/how_to_count_member"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textView23"
        app:layout_constraintLeft_toRightOf="@+id/nSpecial2" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:text="@string/how_to_count_member"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nSpecial3" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/detailed_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>