<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParticipantsActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_participants"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/extraGroupSpinner"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="3dp"
        android:background="#2a999999"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@+id/participantsList"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/participantsList"
        android:layout_width="368dp"
        android:layout_height="366dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/participantsList"
        app:layout_constraintStart_toEndOf="@+id/extraGroupSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="9dp"
        android:text="@string/narrow_down_group"
        app:layout_constraintBottom_toTopOf="@+id/extraGroupSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickAddMemberButton"
        android:text="@string/add_member"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>